Add controller, service, config, model, repository layers and SQL setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+# Proje adı
 spring.application.name=project2spring
+
+# Sunucu portu
+server.port=8080
+
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# JPA ayarları
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# H2 veri tabanı bağlantısı
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
